added wakeOnLan enable/disable flag in controller config
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -326,6 +326,10 @@
 							<td><toggle-switch ng-model="config.powerManagementEnabled"></toggle-switch></td>
 						</tr>
 						<tr>
+							<td><span class="fa fa-magic"></span> Wake-on-Lan enabled</td>
+							<td><toggle-switch ng-model="config.wakeOnLanEnabled"></toggle-switch></td>
+						</tr>
+						<tr>
 							<td><span class="fa fa-copy"></span> KSM enabled
 							</td>
 							<td><toggle-switch ng-model="config.ksmEnabled"></toggle-switch></td>
