--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -879,65 +879,90 @@
 		<h3 class="modal-title">Join Host {{host.address}}</h3>
 	</div>
 	<div class="modal-body">
-	<div ng-if="errors.length > 0" ng-repeat="error in errors">
-		<div class="alert alert-danger" role="alert">
-			<span class="glyphicon glyphicon-ban-circle"></span> <strong>[{{error.code}}]</strong> {{error.message}}
-		</div>
-	</div>
-	<div class="input-group {{errors.length > 0 ? 'has-errors' : ''}}">
-		<div class="input-group-addon">
-			<span class="glyphicon glyphicon-map-marker"></span>
-		</div>
-		<input
-				ng-model="host.address"
-				class="form-control"
-				placeholder="address"
-				ng-blur="checkHostAddress(); updatePubkey();"
-				autocomplete="off"
-				autofocus>
-		<div class="input-group-btn">
-			<button
-					type="button"
-					class="btn btn-default"
-					uib-tooltip="If host is dedicated, kerub can use all resources, change configuration and turn off when the host is not needed"
-					ng-click="host.dedicated = !host.dedicated">
-				<span ng-class="{true: 'glyphicon glyphicon-heart', false: 'glyphicon glyphicon-heart-empty'}[host.dedicated]"></span>
-			</button>
-		</div>
-	</div>
-	<div class="input-group">
-		<div class="input-group-addon">
-			<span ng-class="{true: 'fa fa-refresh fa-spin', false: 'fa fa-cog'}[pubkeyUpdating]"></span>
-		</div>
-		<input
-				ng-model="host.publicKey"
-				readonly
-				disabled
-				class="form-control"
-				placeholder="fingerprint">
-	</div>
-	<div class="input-group" ng-show="!usepubkey">
-		<div class="input-group-btn">
-			<button type="button" class="btn button-default" ng-click="usepubkey = !usepubkey">
-				<span class="glyphicon glyphicon-asterisk"></span>
-			</button>
-		</div>
-		<input
-				ng-model="password.password"
-				class="form-control"
-				type="password"
-				placeholder="password"
-				ng-keypress="onKeyPress($event)">
-	</div>
-	<div class="input-group" ng-show="usepubkey">
-		<div class="input-group-btn">
-			<button type="button" class="btn button-default" ng-click="usepubkey = !usepubkey">
-				<span class="fa fa-key"></span>
-			</button>
-		</div>
-		<input readonly="readonly" class="form-control" rows="3" ng-value="controllerKey" uib-tooltip="Add to /root/.ssh/authorized_keys">
-		</input>
-	</div>
+
+		<uib-tabset justified="true">
+
+			<uib-tab index="0">
+
+				<uib-tab-heading>
+					<i class="glyphicon glyphicon-map-marker"></i> Address
+				</uib-tab-heading>
+
+				<div ng-if="errors.length > 0" ng-repeat="error in errors">
+					<div class="alert alert-danger" role="alert">
+						<span class="glyphicon glyphicon-ban-circle"></span> <strong>[{{error.code}}]</strong> {{error.message}}
+					</div>
+				</div>
+				<div class="input-group {{errors.length > 0 ? 'has-errors' : ''}}">
+					<div class="input-group-addon">
+						<span class="glyphicon glyphicon-map-marker"></span>
+					</div>
+					<input
+							ng-model="host.address"
+							class="form-control"
+							placeholder="address"
+							ng-blur="checkHostAddress(); updatePubkey();"
+							autocomplete="off"
+							autofocus>
+					<div class="input-group-btn">
+						<button
+								type="button"
+								class="btn btn-default"
+								uib-tooltip="If host is dedicated, kerub can use all resources, change configuration and turn off when the host is not needed"
+								ng-click="host.dedicated = !host.dedicated">
+							<span ng-class="{true: 'glyphicon glyphicon-heart', false: 'glyphicon glyphicon-heart-empty'}[host.dedicated]"></span>
+						</button>
+					</div>
+				</div>
+				<div class="input-group">
+					<div class="input-group-addon">
+						<span ng-class="{true: 'fa fa-refresh fa-spin', false: 'fa fa-cog'}[pubkeyUpdating]"></span>
+					</div>
+					<input
+							ng-model="host.publicKey"
+							readonly
+							disabled
+							class="form-control"
+							placeholder="fingerprint">
+				</div>
+				<div class="input-group" ng-show="!usepubkey">
+					<div class="input-group-btn">
+						<button type="button" class="btn button-default" ng-click="usepubkey = !usepubkey">
+							<span class="glyphicon glyphicon-asterisk"></span>
+						</button>
+					</div>
+					<input
+							ng-model="password.password"
+							class="form-control"
+							type="password"
+							placeholder="password"
+							ng-keypress="onKeyPress($event)">
+				</div>
+				<div class="input-group" ng-show="usepubkey">
+					<div class="input-group-btn">
+						<button type="button" class="btn button-default" ng-click="usepubkey = !usepubkey">
+							<span class="fa fa-key"></span>
+						</button>
+					</div>
+					<input readonly="readonly" class="form-control" rows="3" ng-value="controllerKey" uib-tooltip="Add to /root/.ssh/authorized_keys">
+					</input>
+				</div>
+
+			</uib-tab>
+
+			<uib-tab index="1">
+				<uib-tab-heading>
+					<i class="fa fa-power-off"></i> Power Management
+				</uib-tab-heading>
+
+				<div class="btn-group">
+					<label class="btn {{$scope.host.capabilities.powerManagment.length >0 ? 'btn-default' : 'btn-default'}}" >Clear</label>
+					<label class="btn {{anyPmOfType('ipmi') ? 'btn-success' : 'btn-default'}}" ng-click="toggleIpmi()">IPMI</label>
+					<label class="btn {{anyPmOfType('redfish') ? 'btn-success' : 'btn-default'}}" ng-click="toggleRedfish()">Redfish</label>
+				</div>
+
+			</uib-tab>
+		</uib-tabset>
 
 	</div>
 	<div class="modal-footer">
