--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,7 +186,7 @@
 					<div ng-repeat="item in uploader.queue" class="well">
                         <span ng-if="!isIso(item)" class="fa fa-file">
                         </span><span ng-if="isIso(item)" class="glyphicon glyphicon-cd"></span>
-						{{item.file.name}}
+						{{item.file.name}} <span class="label label-info">{{fileFormat}}</span>
 					</div>
 
 					<div class="form-group progress" ng-if="uploader.progress">
