fs storage monitoring added
status report includes the free capacity as well

Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -270,6 +270,9 @@
 							<li>host storage capacity:
 								{{humanFriendlySize(basicBalanceReport.totalHostStorage)}}
 							</li>
+							<li>host storage free capacity:
+								{{humanFriendlySize(basicBalanceReport.totalHostStorageFree)}}
+							</li>
 							<li>storage requested by vms:
 								{{humanFriendlySize(basicBalanceReport.totalDiskStorageRequested)}}
 							</li>
