UI for host remove operation
a bit lame, no confirmation dialog, but works...

Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -228,6 +228,7 @@
 									<i class="fa fa-reorder"></i>
 									{{humanFriendlySize(host.capabilities.totalMemory)}}
 									</span>
+							<button class="btn fa fa-trash" ng-click="removeHost()"></button>
 						</td>
 					</tr>
 					</tbody>
