storage benchmarking toggle in controller config and UI
Bug-Url: https://github.com/kerubistan/kerub/issues/214
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -467,6 +467,14 @@
 								<toggle-switch ng-model="config.storageTechnologies.iscsiEnabled"></toggle-switch>
 							</td>
 						</tr>
+						<tr>
+							<td><span class="fa fa-hammer"></span> Benchmark the storage
+							</td>
+							<td>
+								<toggle-switch
+										ng-model="config.storageTechnologies.storagebenchmarkingEnbled"></toggle-switch>
+							</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
