--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
 	<script src="js/BusType.js"></script>
 	<script src="js/VirtualStorageLink.js"></script>
 	<script src="js/VirtualDisksTab.js"></script>
+	<script src="js/VirtualDiskRow.js"></script>
 	<script src="js/VmRow.js"></script>
 	<script src="js/VersionInfo.js"></script>
 	<script src="js/NewHostWizard.js"></script>
