--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -279,7 +279,7 @@
 
 </script>
 
-<script type="text/ng-template" id="not-same-host-edit-template">
+<script type="text/ng-template" id="not-same-sourceHost-edit-template">
 	<div class="media" ng-controller="NotSameHostExpectationEdit" ng-init="init(vm)">
 		<div class="media-left">
 			<span class="fa fa-ban expectation-big-icon"></span>
@@ -376,7 +376,7 @@
 	</div>
 </script>
 
-<script type="text/ng-template" id="host-chassis-manufacturer-edit-template">
+<script type="text/ng-template" id="sourceHost-chassis-manufacturer-edit-template">
 	<div class="media" ng-controller="HostChassisManufacturerExpectationEdit" ng-init="init(vm)">
 		<div class="media-left">
 			<span class="fa fa-industry expectation-big-icon"></span>
@@ -878,7 +878,7 @@
 <script type="text/ng-template" id="NewHostWizard.html">
 
 	<div class="modal-header">
-		<h3 class="modal-title">Join Host {{host.address}}</h3>
+		<h3 class="modal-title">Join Host {{sourceHost.address}}</h3>
 	</div>
 	<div class="modal-body">
 
@@ -900,7 +900,7 @@
 						<span class="glyphicon glyphicon-map-marker"></span>
 					</div>
 					<input
-							ng-model="host.address"
+							ng-model="sourceHost.address"
 							class="form-control"
 							placeholder="address"
 							ng-blur="checkHostAddress(); updatePubkey();"
@@ -910,9 +910,9 @@
 						<button
 								type="button"
 								class="btn btn-default"
-								uib-tooltip="If host is dedicated, kerub can use all resources, change configuration and turn off when the host is not needed"
-								ng-click="host.dedicated = !host.dedicated">
-							<span ng-class="{true: 'glyphicon glyphicon-heart', false: 'glyphicon glyphicon-heart-empty'}[host.dedicated]"></span>
+								uib-tooltip="If sourceHost is dedicated, kerub can use all resources, change configuration and turn off when the sourceHost is not needed"
+								ng-click="sourceHost.dedicated = !sourceHost.dedicated">
+							<span ng-class="{true: 'glyphicon glyphicon-heart', false: 'glyphicon glyphicon-heart-empty'}[sourceHost.dedicated]"></span>
 						</button>
 					</div>
 				</div>
@@ -921,7 +921,7 @@
 						<span ng-class="{true: 'fa fa-refresh fa-spin', false: 'fa fa-cog'}[pubkeyUpdating]"></span>
 					</div>
 					<input
-							ng-model="host.publicKey"
+							ng-model="sourceHost.publicKey"
 							readonly
 							disabled
 							class="form-control"
@@ -1014,8 +1014,8 @@
 				type="button"
 				ng-click="addHost()"
 				class="btn btn-primary"
-				ng-disabled="inprg || host.address == '' || (!usepubkey && password.password == '') || host.publicKey == '' "
-		        uib-tooltip="Join this host to the IaaS service"
+				ng-disabled="inprg || sourceHost.address == '' || (!usepubkey && password.password == '') || sourceHost.publicKey == '' "
+		        uib-tooltip="Join this sourceHost to the IaaS service"
 				tooltip-placement="top">
 			<span ng-class="{false:'glyphicon glyphicon-ok-sign', true:'fa fa-refresh fa-spin'}[inprg]"></span>
 		</button>
@@ -1165,7 +1165,7 @@
 		<h3 class="modal-title">
 			<span ng-if="dyn.status" ng-class="hostStatusIcon()"></span>
 			<span ng-if="!dyn.status" class="fa fa-question"></span>
-			Host Details - {{host.address}}</h3>
+			Host Details - {{sourceHost.address}}</h3>
 	</div>
 	<ul class="nav nav-tabs">
 		<li role="presentation" ng-class="isActive('overview')" ng-click="selectView('overview')"><a
@@ -1184,9 +1184,9 @@
 				<span class="input-group-addon fa-fw">
 					<span class="glyphicon glyphicon-barcode"></span>
 				</span>
-				<input class="form-control" ng-model="host.id" disabled>
+				<input class="form-control" ng-model="sourceHost.id" disabled>
 				<span class="input-group-addon">
-					<span ng-class="{true:'glyphicon glyphicon-heart', false:'glyphicon glyphicon-heart-empty'}[host.dedicated]"></span>
+					<span ng-class="{true:'glyphicon glyphicon-heart', false:'glyphicon glyphicon-heart-empty'}[sourceHost.dedicated]"></span>
 				</span>
 			</span>
 		</div>
@@ -1195,41 +1195,41 @@
 				<span class="input-group-addon">
 					<span class="fa fa-gear fa-fw"></span>
 				</span>
-				<input class="form-control" ng-model="host.publicKey" disabled>
+				<input class="form-control" ng-model="sourceHost.publicKey" disabled>
 			</span>
 		</div>
-		<div ng-if="host.capabilities">
-			<div class="form-group" ng-if="host.capabilities.os">
+		<div ng-if="sourceHost.capabilities">
+			<div class="form-group" ng-if="sourceHost.capabilities.os">
 				<span class="input-group">
 					<span class="input-group-addon">
 						<span class="fa fa-code fa-fw"></span>
 					</span>
-					<input class="form-control" ng-model="host.capabilities.os" disabled>
+					<input class="form-control" ng-model="sourceHost.capabilities.os" disabled>
 				</span>
 			</div>
-			<div class="form-group" ng-if="host.capabilities.distribution">
+			<div class="form-group" ng-if="sourceHost.capabilities.distribution">
 				<span class="input-group">
 					<span class="input-group-addon">
 						<span class="fa fa-code-fork fa-fw"></span>
 					</span>
 					<input
 							class="form-control"
-							value="{{host.capabilities.distribution.name}} - {{host.capabilities.distribution.ver.major}} {{host.capabilities.distribution.ver.minor}}"
+							value="{{sourceHost.capabilities.distribution.name}} - {{sourceHost.capabilities.distribution.ver.major}} {{sourceHost.capabilities.distribution.ver.minor}}"
 							disabled>
 				</span>
 			</div>
-			<div class="form-group" ng-if="host.capabilities.cpuArchitecture">
+			<div class="form-group" ng-if="sourceHost.capabilities.cpuArchitecture">
 				<span class="input-group">
 					<span class="input-group-addon">
 						<span class="fa fa-server fa-fw"></span>
 					</span>
-					<input class="form-control" ng-model="host.capabilities.cpuArchitecture" disabled>
+					<input class="form-control" ng-model="sourceHost.capabilities.cpuArchitecture" disabled>
 				</span>
 			</div>
 		</div>
 	</form>
 	<form class="modal-body" ng-show="isVisible('software')">
-            <span ng-repeat="software in host.capabilities.installedSoftware">
+            <span ng-repeat="software in sourceHost.capabilities.installedSoftware">
                 <span class="label label-default">
                     {{software.name}} {{software.ver.major}}<span
 		                ng-if="software.ver.minor">.{{software.ver.minor}}</span><span ng-if="software.ver.build">.{{software.ver.build}}</span>
@@ -1255,7 +1255,7 @@
 				<input class="form-control" ng-value="nrOfCpus" disabled>
 			</span>
 		</div>
-            <span ng-repeat="cpu in host.capabilities.cpus">
+            <span ng-repeat="cpu in sourceHost.capabilities.cpus">
                 <div class="form-group" ng-if="cpu.manufacturer">
 	                <span class="input-group">
 		                <span class="input-group-addon">
@@ -1321,13 +1321,13 @@
 	<form ng-show="isVisible('RAM')">
 		<div class="form-group">
 			<div class="form-group">
-				<uib-progress ng-if="host.capabilities.totalMemory && dyn.memUsed">
+				<uib-progress ng-if="sourceHost.capabilities.totalMemory && dyn.memUsed">
 					<!--
 						dynamic maximum is not supported by angular bootstrap, so this is a workaround here
 
 					-->
 					<uib-bar value="hostMemUsedPercent()" max="100" type="warning">
-						{{humanFriendlySize(dyn.memUsed)}} / {{humanFriendlySize(host.capabilities.totalMemory)}}
+						{{humanFriendlySize(dyn.memUsed)}} / {{humanFriendlySize(sourceHost.capabilities.totalMemory)}}
 					</uib-bar>
 				</uib-progress>
 			</div>
@@ -1341,7 +1341,7 @@
 			</tr>
 			</thead>
 			<tbody>
-			<tr ng-repeat="device in host.capabilities.memoryDevices">
+			<tr ng-repeat="device in sourceHost.capabilities.memoryDevices">
 				<td>
 					{{device.serialNumber}}
 				</td>
@@ -1375,7 +1375,7 @@
 			</tr>
 			</thead>
 			<tbody>
-			<tr ng-repeat="cap in host.capabilities.storageCapabilities">
+			<tr ng-repeat="cap in sourceHost.capabilities.storageCapabilities">
 				<td>{{humanFriendlySize(cap.size)}}</td>
 				<td>
                             <span ng-if="cap['@type'] === 'lvm'">
