--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -26,9 +26,9 @@
 						<td>
 							<span ng-if="vmdyn.status == 'Up'">
 								<uib-progress
-								     animate="false"
-								     min="0"
-								     max="vm.memory.max">
+										animate="false"
+										min="0"
+										max="vm.memory.max">
 										<uib-bar value="vmdyn.memoryUsed">
 											{{humanFriendlySize(vmdyn.memoryUsed)}} / {{humanFriendlySize(vm.memory.max)}}
 										</uib-bar>
@@ -53,8 +53,8 @@
 								</span>
 							</span>
 							<span ng-repeat="expectation in _vm.expectations"
-								  ng-controller="ExpectationMini"
-								  ng-init="init(expectation)">
+							      ng-controller="ExpectationMini"
+							      ng-init="init(expectation)">
 								<span class="label label-{{style}}">
 									<span class="{{icon}}"></span>
 									{{description}}
@@ -87,23 +87,23 @@
 							        tooltip-placement="bottom">
 							</button>
 							<button type="button"
-									class="btn btn-default fa fa-eye"
-									ng-click="spiceConnect()"
-									ng-if="vmdyn.status == 'Up'"
-									ng-disabled="workingprg"
-									uib-tooltip="Connect to VM console"
-									tooltip-placement="bottom">
+							        class="btn btn-default fa fa-eye"
+							        ng-click="spiceConnect()"
+							        ng-if="vmdyn.status == 'Up'"
+							        ng-disabled="workingprg"
+							        uib-tooltip="Connect to VM console"
+							        tooltip-placement="bottom">
 							</button>
 							<button type="button"
-									class="btn btn-default glyphicon glyphicon-pause"
-									uib-tooltip="Pause this VM"
-									ng-if="vmdyn.status == 'Up'"
-									tooltip-placement="bottom">
+							        class="btn btn-default glyphicon glyphicon-pause"
+							        uib-tooltip="Pause this VM"
+							        ng-if="vmdyn.status == 'Up'"
+							        tooltip-placement="bottom">
 							</button>
 							<button type="button"
-									class="btn btn-default glyphicon glyphicon-camera"
-									uib-tooltip="Take snapshot from this VM"
-									tooltip-placement="bottom">
+							        class="btn btn-default glyphicon glyphicon-camera"
+							        uib-tooltip="Take snapshot from this VM"
+							        tooltip-placement="bottom">
 							</button>
 						</td>
 					</tr>
@@ -172,8 +172,8 @@
 							</td>
 							<td>
 								<span ng-repeat="expectation in virtDisk.expectations"
-									  ng-controller="ExpectationMini"
-									  ng-init="init(expectation)">
+								      ng-controller="ExpectationMini"
+								      ng-init="init(expectation)">
 									<span class="label label-{{style}}">
 										<span class="{{icon}}"></span>
 										{{description}}
@@ -205,7 +205,7 @@
 					</thead>
 					<tbody>
 					<tr ng-repeat="_host in hosts.result" class="clickable" ng-click="showHostDetails(_host.id)" ng-controller="HostRowController" ng-init="init(_host)">
-						<td>{{sourceHost.address}}</td>
+						<td>{{host.address}}</td>
 						<td style="maxheight: 50px">
 							<span ng-if="hostDyn">
 							<uib-progress animate="false" min="0" max="100">
@@ -216,30 +216,30 @@
 									{{hostDyn.systemCpu}} %
 								</uib-bar>
 							</uib-progress>
-							<uib-progress max="sourceHost.capabilities.totalMemory" animate="false">
-								<uib-bar value="sourceHost.capabilities.totalMemory - hostDyn.memFree">
-									{{ humanFriendlySize(sourceHost.capabilities.totalMemory-hostDyn.memFree)}} / {{ humanFriendlySize(sourceHost.capabilities.totalMemory)}}
+							<uib-progress max="host.capabilities.totalMemory" animate="false">
+								<uib-bar value="host.capabilities.totalMemory - hostDyn.memFree">
+									{{ humanFriendlySize(host.capabilities.totalMemory-hostDyn.memFree)}} / {{ humanFriendlySize(host.capabilities.totalMemory)}}
 								</uib-bar>
 							</uib-progress>
 							</span>
 						</td>
-						<td><span ng-if="sourceHost.capabilities.distribution" class="label label-primary">
+						<td><span ng-if="host.capabilities.distribution" class="label label-primary">
 									<i class="fa fa-linux"></i>
-									{{sourceHost.capabilities.distribution.name}}
-									{{sourceHost.capabilities.distribution.version.major}}
-									{{sourceHost.capabilities.distribution.version.minor}}
+									{{host.capabilities.distribution.name}}
+									{{host.capabilities.distribution.version.major}}
+									{{host.capabilities.distribution.version.minor}}
 									</span>
-									<span ng-if="sourceHost.capabilities.system.manufacturer" class="label label-default">
+									<span ng-if="host.capabilities.system.manufacturer" class="label label-default">
 									<i class="fa fa-industry"></i>
-									{{sourceHost.capabilities.system.manufacturer}}
+									{{host.capabilities.system.manufacturer}}
 									</span>
-									<span ng-if="sourceHost.capabilities.cpuArchitecture" class="label label-info">
+									<span ng-if="host.capabilities.cpuArchitecture" class="label label-info">
 									<i class="fa fa-gear"></i>
-									{{sourceHost.capabilities.cpuArchitecture}}
+									{{host.capabilities.cpuArchitecture}}
 									</span>
-									<span ng-if="sourceHost.capabilities.cpuArchitecture" class="label label-success">
+									<span ng-if="host.capabilities.cpuArchitecture" class="label label-success">
 									<i class="fa fa-reorder"></i>
-									{{humanFriendlySize(sourceHost.capabilities.totalMemory)}}
+									{{humanFriendlySize(host.capabilities.totalMemory)}}
 									</span>
 							<button class="btn fa fa-trash" ng-click="removeHost()"></button>
 						</td>
@@ -285,7 +285,7 @@
 						<ul>
 							<li>hosts: {{basicBalanceReport.totalHosts}} ({{basicBalanceReport.hostsOnline}} online)</li>
 							<li>vms: {{basicBalanceReport.totalVms}}</li>
-							<li>total sourceHost memory:
+							<li>total host memory:
 								{{humanFriendlySize(basicBalanceReport.totalHostMemory)}}
 							</li>
 							<li>min vm memory:
@@ -294,7 +294,7 @@
 							<li>max vm memory:
 								{{humanFriendlySize(basicBalanceReport.totalMaxVmMemory)}}
 							</li>
-							<li>sourceHost cpus:
+							<li>host cpus:
 								{{basicBalanceReport.totalHostCpus}}
 							</li>
 							<li>vm cpus:
@@ -306,40 +306,40 @@
 						</ul>
 
 
-							<uib-progress>
-								<uib-bar value="percent(basicBalanceReport.totalDiskStorageRequested, maxStorage(basicBalanceReport))"
-								         max="100"
-								         type="info">
-									requested {{humanFriendlySize(basicBalanceReport.totalDiskStorageRequested)}}
-									<strong>{{ percent(basicBalanceReport.totalDiskStorageRequested, maxStorage(basicBalanceReport)) }} %</strong>
-								</uib-bar>
-							</uib-progress>
-							<uib-progress>
-								<uib-bar value="percent(basicBalanceReport.totalDiskStorageActual, maxStorage(basicBalanceReport))"
-								         max="100"
-								         type="info">
-									used {{humanFriendlySize(basicBalanceReport.totalDiskStorageActual)}}
-									<strong>{{ percent(basicBalanceReport.totalDiskStorageActual, maxStorage(basicBalanceReport)) }} %</strong>
-								</uib-bar>
-							</uib-progress>
+						<uib-progress>
+							<uib-bar value="percent(basicBalanceReport.totalDiskStorageRequested, maxStorage(basicBalanceReport))"
+							         max="100"
+							         type="info">
+								requested {{humanFriendlySize(basicBalanceReport.totalDiskStorageRequested)}}
+								<strong>{{ percent(basicBalanceReport.totalDiskStorageRequested, maxStorage(basicBalanceReport)) }} %</strong>
+							</uib-bar>
+						</uib-progress>
+						<uib-progress>
+							<uib-bar value="percent(basicBalanceReport.totalDiskStorageActual, maxStorage(basicBalanceReport))"
+							         max="100"
+							         type="info">
+								used {{humanFriendlySize(basicBalanceReport.totalDiskStorageActual)}}
+								<strong>{{ percent(basicBalanceReport.totalDiskStorageActual, maxStorage(basicBalanceReport)) }} %</strong>
+							</uib-bar>
+						</uib-progress>
 
-							<uib-progress>
-								<uib-bar value="percent(basicBalanceReport.totalHostStorage, maxStorage(basicBalanceReport))"
-								         max="100"
-								         type="info">
-									total physical {{humanFriendlySize(basicBalanceReport.totalHostStorage)}}
-									<strong>{{ percent(basicBalanceReport.totalHostStorage, maxStorage(basicBalanceReport)) }} %</strong>
-								</uib-bar>
-							</uib-progress>
+						<uib-progress>
+							<uib-bar value="percent(basicBalanceReport.totalHostStorage, maxStorage(basicBalanceReport))"
+							         max="100"
+							         type="info">
+								total physical {{humanFriendlySize(basicBalanceReport.totalHostStorage)}}
+								<strong>{{ percent(basicBalanceReport.totalHostStorage, maxStorage(basicBalanceReport)) }} %</strong>
+							</uib-bar>
+						</uib-progress>
 
-							<uib-progress>
-								<uib-bar value="percent(basicBalanceReport.totalHostStorageFree, maxStorage(basicBalanceReport))"
-								         max="100"
-								         type="info">
-									free {{humanFriendlySize(basicBalanceReport.totalHostStorageFree)}}
-									<strong>{{ percent(basicBalanceReport.totalHostStorageFree, maxStorage(basicBalanceReport)) }} %</strong>
-								</uib-bar>
-							</uib-progress>
+						<uib-progress>
+							<uib-bar value="percent(basicBalanceReport.totalHostStorageFree, maxStorage(basicBalanceReport))"
+							         max="100"
+							         type="info">
+								free {{humanFriendlySize(basicBalanceReport.totalHostStorageFree)}}
+								<strong>{{ percent(basicBalanceReport.totalHostStorageFree, maxStorage(basicBalanceReport)) }} %</strong>
+							</uib-bar>
+						</uib-progress>
 
 					</div>
 				</div>
@@ -384,110 +384,110 @@
 				</button>
 				<table class="table table-striped table-hover">
 					<tbody>
-						<tr>
-							<td><span class="fa fa-briefcase"></span> Accounts required</td>
-							<td><toggle-switch
-									ng-model="config.accountsRequired"
-									html="true"
-									knob-label="<i class='fa fa-briefcase'></i>"
-									on-label="<i class='fa fa-lock'></i>"
-									off-label="<i class='fa fa-unlock'></i>"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-plug"></span> Power management enabled</td>
-							<td><toggle-switch ng-model="config.powerManagementEnabled"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-magic"></span> Wake-on-Lan enabled</td>
-							<td><toggle-switch ng-model="config.wakeOnLanEnabled"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-copy"></span> KSM enabled
-							</td>
-							<td><toggle-switch ng-model="config.ksmEnabled"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-copy"></span> Controller can install new software on the sourceHost
-							</td>
-							<td><toggle-switch ng-model="config.installSoftwareEnabled"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-linux"></span> Linux LVM create volume enabled
-							</td>
-							<td><toggle-switch ng-model="config.storageTechnologies.lvmCreateVolumeEnabled"></toggle-switch></td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-folder"></span> Storage filesystem path
-							</td>
-							<td>
+					<tr>
+						<td><span class="fa fa-briefcase"></span> Accounts required</td>
+						<td><toggle-switch
+								ng-model="config.accountsRequired"
+								html="true"
+								knob-label="<i class='fa fa-briefcase'></i>"
+								on-label="<i class='fa fa-lock'></i>"
+								off-label="<i class='fa fa-unlock'></i>"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-plug"></span> Power management enabled</td>
+						<td><toggle-switch ng-model="config.powerManagementEnabled"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-magic"></span> Wake-on-Lan enabled</td>
+						<td><toggle-switch ng-model="config.wakeOnLanEnabled"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-copy"></span> KSM enabled
+						</td>
+						<td><toggle-switch ng-model="config.ksmEnabled"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-copy"></span> Controller can install new software on the host
+						</td>
+						<td><toggle-switch ng-model="config.installSoftwareEnabled"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-linux"></span> Linux LVM create volume enabled
+						</td>
+						<td><toggle-switch ng-model="config.storageTechnologies.lvmCreateVolumeEnabled"></toggle-switch></td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-folder"></span> Storage filesystem path
+						</td>
+						<td>
 								<span ng-repeat="_path in config.storageTechnologies.fsPathEnabled">
 									<span class="label label-info">
 										<span class="fa fa-folder-o"></span> {{_path}}
 										<span class="clickable fa fa-close" ng-click="removeFsPathEnabled(_path)"></span>
 									</span><br>
 								</span>
-								<input class="form-control" type="text"
-								       ng-model="newFsPath"
-								       ng-blur="config.storageTechnologies.fsPathEnabled.push(newFsPath); newFsPathAdd = false; newFsPath = null;"
-								       ng-show="newFsPathAdd"
-								/>
-								<button ng-show="!newFsPathAdd"
-								        class="btn btn-primary fa fa-plus"
-								        type="button" ng-click="newFsPathAdd = true;"></button>
-							</td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-archive"></span> Filesystem types
-							</td>
-							<td>
+							<input class="form-control" type="text"
+							       ng-model="newFsPath"
+							       ng-blur="config.storageTechnologies.fsPathEnabled.push(newFsPath); newFsPathAdd = false; newFsPath = null;"
+							       ng-show="newFsPathAdd"
+							/>
+							<button ng-show="!newFsPathAdd"
+							        class="btn btn-primary fa fa-plus"
+							        type="button" ng-click="newFsPathAdd = true;"></button>
+						</td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-archive"></span> Filesystem types
+						</td>
+						<td>
 								<span ng-repeat="_type in config.storageTechnologies.fsTypeEnabled">
 									<span class="label label-info">
 										<span class="fa fa-archive"></span> {{_type}}
 										<span class="clickable fa fa-close" ng-click="removeFsTypeEnabled(_type)"></span>
 									</span><br>
 								</span>
-								<input class="form-control" type="text"
-								       ng-model="newFsType"
-								       ng-blur="config.storageTechnologies.fsTypeEnabled.push(newFsType); newFsTypeAdd = false; newFsType = null;"
-								       ng-show="newFsTypeAdd"
-								/>
-								<button ng-show="!newFsTypeAdd"
-								        class="btn btn-primary fa fa-plus"
-								        type="button"
-								        ng-click="newFsTypeAdd = true;"></button>
-							</td>
-						</tr>
-						<tr>
-							<!-- TODO: G stands for Gvinum and not for google, need a better icon -->
-							<td><span class="fa fa-google"></span> Create FreeBSD Gvinum volumes
-							</td>
-							<td>
-								<toggle-switch
-										ng-model="config.storageTechnologies.gvinumCreateVolumeEnabled"></toggle-switch>
-							</td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-share-alt"></span> NFS
-							</td>
-							<td>
-								<toggle-switch ng-model="config.storageTechnologies.nfsEnabled"></toggle-switch>
-							</td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-database"></span> iSCSI
-							</td>
-							<td>
-								<toggle-switch ng-model="config.storageTechnologies.iscsiEnabled"></toggle-switch>
-							</td>
-						</tr>
-						<tr>
-							<td><span class="fa fa-hammer"></span> Benchmark the storage
-							</td>
-							<td>
-								<toggle-switch
-										ng-model="config.storageTechnologies.storagebenchmarkingEnbled"></toggle-switch>
-							</td>
-						</tr>
+							<input class="form-control" type="text"
+							       ng-model="newFsType"
+							       ng-blur="config.storageTechnologies.fsTypeEnabled.push(newFsType); newFsTypeAdd = false; newFsType = null;"
+							       ng-show="newFsTypeAdd"
+							/>
+							<button ng-show="!newFsTypeAdd"
+							        class="btn btn-primary fa fa-plus"
+							        type="button"
+							        ng-click="newFsTypeAdd = true;"></button>
+						</td>
+					</tr>
+					<tr>
+						<!-- TODO: G stands for Gvinum and not for google, need a better icon -->
+						<td><span class="fa fa-google"></span> Create FreeBSD Gvinum volumes
+						</td>
+						<td>
+							<toggle-switch
+									ng-model="config.storageTechnologies.gvinumCreateVolumeEnabled"></toggle-switch>
+						</td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-share-alt"></span> NFS
+						</td>
+						<td>
+							<toggle-switch ng-model="config.storageTechnologies.nfsEnabled"></toggle-switch>
+						</td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-database"></span> iSCSI
+						</td>
+						<td>
+							<toggle-switch ng-model="config.storageTechnologies.iscsiEnabled"></toggle-switch>
+						</td>
+					</tr>
+					<tr>
+						<td><span class="fa fa-hammer"></span> Benchmark the storage
+						</td>
+						<td>
+							<toggle-switch
+									ng-model="config.storageTechnologies.storagebenchmarkingEnbled"></toggle-switch>
+						</td>
+					</tr>
 					</tbody>
 				</table>
 			</div>
