--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -2,7 +2,7 @@
 	<uib-tabset>
 		<uib-tab>
 			<uib-tab-heading>
-				<i class="fa fa-cube"></i> VMs
+				<em class="fa fa-cube"></em> VMs
 			</uib-tab-heading>
 			<span ng-controller="VmTab">
 				<button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()" uib-tooltip="Create new VM" tooltip-placement="right"></button>
@@ -114,7 +114,7 @@
 		</uib-tab>
 		<uib-tab disabled="true">
 			<uib-tab-heading>
-				<i class="fa fa-sitemap"></i> Virtual networks
+				<em class="fa fa-sitemap"></em> Virtual networks
 			</uib-tab-heading>
 			<span ng-controller="VirtualNetworkTab">
 				<button type="button" class="btn btn-default glyphicon glyphicon-plus" uib-tooltip="Create new Virtual Network" tooltip-placement="right" ng-click="newVirtualNetwork()"></button>
@@ -141,7 +141,7 @@
 		</uib-tab>
 		<uib-tab >
 			<uib-tab-heading>
-				<i class="fa fa-database"></i> Virtual disks
+				<em class="fa fa-database"></em> Virtual disks
 			</uib-tab-heading>
 			<span ng-controller="VirtualDisksTab">
 				<button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()" uib-tooltip="Create new Virtual Disk" tooltip-placement="right"></button>
@@ -191,21 +191,21 @@
 		</uib-tab>
 		<uib-tab>
 			<uib-tab-heading>
-				<i class="fa fa-clone"></i> Templates
+				<em class="fa fa-clone"></em> Templates
 			</uib-tab-heading>
 			<span >
 			</span>
 		</uib-tab>
 		<uib-tab>
 			<uib-tab-heading>
-				<i class="fa fa-cubes"></i> Pools
+				<em class="fa fa-cubes"></em> Pools
 			</uib-tab-heading>
 			<span >
 			</span>
 		</uib-tab>
 		<uib-tab ng-if="isAdmin()">
 			<uib-tab-heading>
-				<i class="fa fa-server"></i> Hosts
+				<em class="fa fa-server"></em> Hosts
 			</uib-tab-heading>
 			<span ng-controller="HostTab">
 				<button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()" uib-tooltip="Join a new Host" tooltip-placement="right"></button>
@@ -265,7 +265,7 @@
 		</uib-tab>
 		<uib-tab ng-if="isAdmin()">
 			<uib-tab-heading>
-				<i class="fa fa-users"></i> Groups
+				<em class="fa fa-users"></em> Groups
 			</uib-tab-heading>
 			<div ng-controller="AccountsAdmin">
 				<button type="button" class="btn btn-default fa fa-credit-card" ng-click="openNewAccountDialog()" uib-tooltip="Create new account"></button>
@@ -287,7 +287,7 @@
 		</uib-tab>
 		<uib-tab ng-if="isAdmin()">
 			<uib-tab-heading>
-				<i class="fa fa-balance-scale"></i> Status
+				<em class="fa fa-balance-scale"></em> Status
 			</uib-tab-heading>
 			<div ng-controller="StatusTab" ng-init="refresh()">
 				<div class="panel panel-default">
@@ -384,7 +384,7 @@
 		</uib-tab>
 		<uib-tab ng-if="isAdmin()">
 			<uib-tab-heading>
-				<i class="fa fa-sliders"></i> Settings
+				<em class="fa fa-sliders"></em> Settings
 			</uib-tab-heading>
 			<div ng-controller="Settings">
 				<button type="button" class="btn btn-default" ng-click="save()" uib-tooltip="Save configuration" tooltip-placement="right">
@@ -508,7 +508,7 @@
 		</uib-tab>
 		<uib-tab>
 			<uib-tab-heading>
-				<i class="glyphicon glyphicon-info-sign"></i> About
+				<em class="glyphicon glyphicon-info-sign"></em> About
 			</uib-tab-heading>
 			<div class="panel panel-default">
 				<div class="panel-heading" ng-controller="VersionInfo">
