image alt (auto-bug by sonar)
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -515,7 +515,7 @@
 					version info
 				</div>
 				<div class="panel-body">
-					<img src="img/kerub.png"><br>
+					<img src="img/kerub.png" alt="logo"><br>
 					<span>title: {{versionInfo.title}}</span><br>
 					<span>vendor: {{versionInfo.vendor}}</span><br>
 					<span>version: {{versionInfo.version}}</span><br>
